PE-34: added descriptor API related to approved agreement on backoffice side, added lastUpdateDate on agreement entity and business logic for update it, refactoring tests
