# openapi/backoffice/openapi.yaml
@@ -226,7 +226,57 @@ paths:
           $ref: '#/responses/NotFound'
         409:
           $ref: '#/responses/Conflict'
+  /approved-agreements:
+    get:
+      tags:
+        - agreement
+      summary: Get list of approved agreements
+      operationId: getApprovedAgreements
+      parameters:
+        - in: query
+          name: profileFullName
+          description: String to search in profile full name
+          required: false
+          type: string
+        - in: query
+          name: lastUpdateDateFrom
+          description: Agreement last update date lower bound
+          required: false
+          type: string
+          format: date
+        - in: query
+          name: lastUpdateDateTo
+          description: Agreement last update date upper bound
+          required: false
+          type: string
+          format: date
+        - $ref: '#/parameters/PageSize'
+        - $ref: '#/parameters/PageNumber'
+      responses:
+        200:
+          description: List of approved agreements
+          schema:
+            $ref: '#/definitions/ApprovedAgreements'
+        403:
+          $ref: '#/responses/Forbidden'
 
+  /approved-agreements/{agreementId}:
+    get:
+      tags:
+        - agreement
+      summary: Get approved agreement
+      operationId: getApprovedAgreement
+      parameters:
+        - $ref: '#/parameters/AgreementId'
+      responses:
+        200:
+          description: Approved agreement
+          schema:
+            $ref: '#/definitions/ApprovedAgreementDetail'
+        403:
+          $ref: '#/responses/Forbidden'
+        404:
+          $ref: '#/responses/NotFound'
 consumes:
   - application/json
 produces:
@@ -282,6 +332,18 @@ definitions:
       total:
         type: integer
 
+  ApprovedAgreements:
+    type: object
+    required:
+      - items
+    properties:
+      items:
+        type: array
+        items:
+          $ref: '#/definitions/ApprovedAgreement'
+      total:
+        type: integer
+
   Agreement:
     type: object
     discriminator: state
@@ -316,20 +378,40 @@ definitions:
             $ref: '#/definitions/Assignee'
 
   ApprovedAgreement:
-    allOf:
-      - $ref: '#/definitions/Agreement'
-      - type: object
+    type: object
+    required:
+      - agreementId
+      - fullName
+      - agreementStartDate
+      - agreementLastUpdateDate
+    properties:
+      agreementId:
+        type: string
+      fullName:
+        type: string
+      agreementStartDate:
+        type: string
+        format: date
+      agreementLastUpdateDate:
+        type: string
+        format: date
 
-  RejectedAgreement:
-    allOf:
-      - $ref: '#/definitions/Agreement'
-      - type: object
-        required:
-          - reasonMessage
-        properties:
-          reasonMessage:
-            type: string
-
+  ApprovedAgreementDetail:
+    type: object
+    required:
+      - agreementId
+      - profile
+      - discounts
+      - documents
+    properties:
+      agreementId:
+        type: string
+      profile:
+        $ref: '#/definitions/ApprovedAgreementProfile'
+      discounts:
+        $ref: '#/definitions/ApprovedAgreementDiscounts'
+      documents:
+        $ref: '#/definitions/Documents'
   AgreementState:
     type: string
     enum:
@@ -362,8 +444,6 @@ definitions:
       - fullName
       - pecAddress
       - referent
-      - description
-      - salesChannel
     properties:
       id:
         type: string
@@ -373,6 +453,52 @@ definitions:
         type: string
       referent:
         $ref: '#/definitions/Referent'
+
+  ApprovedAgreementProfile:
+    type: object
+    required:
+      - description
+      - salesChannel
+      - lastUpateDate
+      #tab profilo
+      - fullName
+      - taxCodeOrVat
+      - pecAddress
+      - telephoneNumber
+      - legalRepresentativeFullName
+      - legalRepresentativeTaxCode
+      - referent
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+      salesChannel:
+        $ref: '#/definitions/SalesChannel'
+      imageUrl:
+        type: string
+      lastUpateDate:
+        type: string
+        format: date
+      #tab profilo
+      fullName:
+        type: string
+      taxCodeOrVat:
+        type: string
+        minLength: 11
+        maxLength: 16
+      pecAddress:
+        type: string
+        format: email
+      telephoneNumber:
+        type: string
+        maxLength: 15
+      legalRepresentativeFullName:
+        type: string
+      legalRepresentativeTaxCode:
+        type: string
+      referent:
+        $ref: '#/definitions/ApprovedAgreementReferent'
 
   Referent:
     type: object
@@ -392,10 +518,37 @@ definitions:
         type: string
         maxLength: 15
 
+  ApprovedAgreementReferent:
+    type: object
+    required:
+      - firstName
+      - lastName
+      - emailAddress
+      - telephoneNumber
+      - role
+    properties:
+      firstName:
+        type: string
+      lastName:
+        type: string
+      emailAddress:
+        type: string
+        format: email
+      telephoneNumber:
+        type: string
+        maxLength: 15
+      role:
+        type: string
+
   Discounts:
     type: array
     items:
       $ref: '#/definitions/Discount'
+
+  ApprovedAgreementDiscounts:
+    type: array
+    items:
+      $ref: '#/definitions/ApprovedAgreementDiscount'
 
   Discount:
     type: object
@@ -414,12 +567,140 @@ definitions:
       name:
         type: string
 
+  ApprovedAgreementDiscount:
+    type: object
+    required:
+      - id
+      - name
+      - description
+      - startDate
+      - endDate
+      - discount
+      - productCategories
+      - condition
+      - lastUpateDate
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      startDate:
+        type: string
+        format: date
+      endDate:
+        type: string
+        format: date
+      discount:
+        type: integer
+        format: int32
+      productCategories:
+        type: array
+        items:
+          $ref: '#/definitions/ProductCategory'
+        minItems: 1
+      condition:
+        type: string
+      lastUpateDate:
+        type: string
+        format: date
+
   DiscountState:
     type: string
     enum:
       - draft
       - published
       - rejected
+
+  ProductCategory:
+    type: string
+    enum:
+      - Entertainments
+      - Travels
+      - Transportation
+      - Connectivity
+      - Books
+      - Arts
+      - Sports
+      - Health
+
+  SalesChannel:
+    type: object
+    discriminator: channelType
+    required:
+      - channelType
+    properties:
+      channelType:
+        $ref: '#/definitions/SalesChannelType'
+
+  OnlineChannel:
+    allOf:
+      - $ref: '#/definitions/SalesChannel'
+      - type: object
+        required:
+          - websiteUrl
+        properties:
+          websiteUrl:
+            type: string
+
+  OfflineChannel:
+    allOf:
+      - $ref: '#/definitions/SalesChannel'
+      - type: object
+        required:
+          - addresses
+        properties:
+          websiteUrl:
+            type: string
+          addresses:
+            type: array
+            minItems: 1
+            items:
+              $ref: '#/definitions/Address'
+
+  BothChannels:
+    allOf:
+      - $ref: '#/definitions/SalesChannel'
+      - type: object
+        required:
+          - websiteUrl
+          - addresses
+        properties:
+          websiteUrl:
+            type: string
+          addresses:
+            type: array
+            minItems: 1
+            items:
+              $ref: '#/definitions/Address'
+
+  SalesChannelType:
+    type: string
+    enum:
+      - OnlineChannel
+      - OfflineChannel
+      - BothChannels
+  Address:
+    type: object
+    required:
+      - street
+      - zipCode
+      - city
+      - district
+    properties:
+      street:
+        type: string
+      zipCode:
+        type: string
+        minLength: 5
+        maxLength: 5
+      city:
+        type: string
+      district:
+        type: string
+        minLength: 2
+        maxLength: 2
 
   Documents:
     type: array
